# mandelbrot-renderer

./: .gitignore  CMakeLists.txt  CMakelists.txt  a.out  color.cpp  color.h  image.cpp  mandelbrot.cpp  mandelbrot.sh  mendelbrot.cpp  mendelbrot.cpp~  palette.csv  palette2.csv  palette3.csv  performance.txt  readme.md
include/: color.h  image.h  mandelbrot.h
palettes/: palette3.csv  palette4.csv  palette5.csv  palette6.csv
